[gd_scene load_steps=17 format=3 uid="uid://1yh8kgam3qt0"]

[ext_resource type="Script" uid="uid://duendb7s7esnx" path="res://scripts/main/Main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://bx8kf7vqrp1jy" path="res://scenes/player/Player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://ekmnii02vu08" path="res://scenes/systems/EnemySpawner.tscn" id="3_spawner"]
[ext_resource type="Texture2D" uid="uid://bgwfj2v4iapj2" path="res://assets/backgrounds/grass.jpg" id="4_grass"]
[ext_resource type="PackedScene" path="res://scenes/weapons/PhiKiem.tscn" id="5_phikiem"]
[ext_resource type="Script" uid="uid://2rl1air3117r" path="res://scripts/ui/HUD.gd" id="6_hud"]
[ext_resource type="PackedScene" path="res://scenes/ui/GameOver.tscn" id="7_gameover"]
[ext_resource type="PackedScene" path="res://scenes/ui/LevelUpUI.tscn" id="8_levelup"]
[ext_resource type="PackedScene" path="res://scenes/weapons/HoaCau.tscn" id="9_hoacau"]
[ext_resource type="PackedScene" path="res://scenes/weapons/LoiKich.tscn" id="10_loikich"]
[ext_resource type="PackedScene" path="res://scenes/ui/UpgradeNotification.tscn" id="11_notification"]
[ext_resource type="PackedScene" path="res://scenes/ui/VictoryScreen.tscn" id="12_victory"]
[ext_resource type="PackedScene" path="res://scenes/ui/PauseMenu.tscn" id="13_pause"]
[ext_resource type="Script" path="res://scripts/main/CameraShake.gd" id="14_camera"]
[ext_resource type="Script" path="res://scripts/ui/DamageNumberSpawner.gd" id="15_dmgspawn"]
[ext_resource type="PackedScene" path="res://scenes/ui/PowerUpStore.tscn" id="16_store"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("14_camera")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.08, 0.06, 0.12, 1)

[node name="Grass" type="Sprite2D" parent="."]
position = Vector2(647.5, 499.5)
scale = Vector2(1.2626953, 1.2626953)
texture = ExtResource("4_grass")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 360)

[node name="PhiKiem" parent="Player/WeaponContainer" instance=ExtResource("5_phikiem")]

[node name="HoaCau" parent="Player/WeaponContainer" instance=ExtResource("9_hoacau")]

[node name="LoiKich" parent="Player/WeaponContainer" instance=ExtResource("10_loikich")]

[node name="EnemySpawner" parent="." instance=ExtResource("3_spawner")]

[node name="DamageNumberSpawner" type="Node" parent="."]
script = ExtResource("15_dmgspawn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_hud")

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HUD/HealthBar"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 20.0
text = "HP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 65.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 580.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 50.0
text = "00:00"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 120.0
offset_bottom = 95.0
text = "Level: 1"

[node name="KillCountLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 1100.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 50.0
text = "Kills: 0"
horizontal_alignment = 2

[node name="AutoUpgradeToggle" type="CheckButton" parent="UI/HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 180.0
offset_bottom = 125.0
text = "Auto Upgrade"
toggle_mode = true

[node name="GameOver" parent="." instance=ExtResource("7_gameover")]

[node name="LevelUpUI" parent="." instance=ExtResource("8_levelup")]

[node name="UpgradeNotification" parent="." instance=ExtResource("11_notification")]

[node name="VictoryScreen" parent="." instance=ExtResource("12_victory")]

[node name="PauseMenu" parent="." instance=ExtResource("13_pause")]

[node name="PowerUpStore" parent="." instance=ExtResource("16_store")]

